mwd26-integration/target-app/main/default/objects/External_Request__c/External_Request__c.object-meta.xml
<CustomObject>
    <description>MWD26 demo — back-office request received by the Target Org from the Source Org via Apex REST.</description>
    <label>External Request</label>
    <pluralLabel>External Requests</pluralLabel>
    <nameField>
        <displayFormat>EXT-{0000}</displayFormat>
        <label>External Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>