mwd26-integration/target-app/main/default/objects/External_Request__c/fields/Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Details__c</fullName>
    <label>Request Details</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>