mwd26-integration/target-app/main/default/objects/External_Request__c/fields/Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Name__c</fullName>
    <label>Request Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>