mwd26-integration/target-app/main/default/objects/External_Request__c/fields/Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Message__c</fullName>
    <label>Response Message</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>