mwd26-integration/target-app/main/default/objects/External_Request__c/fields/Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Source_Org__c</fullName>
    <label>Source Org</label>
    <description>Name or Id of the Salesforce org that sent the request.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>