mwd26-integration/target-app/main/default/objects/External_Request__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <label>Source Record Id</label>
    <description>Id of the originating Integration_Request__c record in the Source Org.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>