mwd26-integration/target-app/main/default/objects/External_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Request_Name__c</columns>
    <columns>Customer_Email__c</columns>
    <columns>Processing_Status__c</columns>
    <columns>Source_Record_Id__c</columns>
    <columns>Source_Org__c</columns>
    <columns>Response_Message__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>